# streamlit_for_crag

./: .env  .gitignore  README.md  pyproject.toml  settings.py  streamlit_for_crag.py
docker/: Dockerfile
